# kanidm-builder

./: .dependabotbot.json  .gitignore  .pylintrc  .terraform.lock.hcl  Dockerfile  Dockerfile-common  Dockerfile-debianbuster  Dockerfile-opensuse-tumbleweed  Dockerfile-opensuseleap152  Dockerfile-ubuntu-bionic  Dockerfile-ubuntu-focal  Dockerfile_debian_buster  Dockerfile_debian_generic  Dockerfile_opensuse_leap152  Dockerfile_opensuse_leap153  Dockerfile_opensuse_tumbleweed  Dockerfile_ubuntu_bionic  Dockerfile_ubuntu_focal  Dockerfile_ubuntu_generic  Dockerfile_ubuntu_groovy  Dockerfile_ubuntu_hirsute  Dockerfile_wasm  Dockerfile_wasm.tumbleweed  Makefile  README.md  SECURITY.MD  build_deb_get_kanidm_version.sh  build_deb_kanidm.sh  build_deb_kanidm_pamnss.sh  build_deb_kanidm_pamnss_postinst.sh  build_deb_kanidm_pamnss_prerm.sh  build_deb_kanidm_ssh.sh  build_deb_kanidm_unixd.sh  build_deb_kanidmd.sh  build_debs.sh  build_find_pamdir.sh  build_get_sccache.sh  build_in_docker.sh  build_local_arch.sh  build_wasm.sh  (+15 more)
.github/actions/build_container/: Dockerfile
.github/workflows/: build_container.yml  build_container.yml.disabled
kanidm_builder/: __init__.py
tests/: test_click.py
