[tool.poetry]
name = "kanidm_builder"
version = "0.0.1"
description = "A really overcomplicated thing to build kanidm binaries."
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.2"
docker = "^6.1.0"
loguru = "^0.7.0"

[tool.poetry.dev-dependencies]
pylint = "^2.13.9"
mypy = "^1.2"
black = "^23.3"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
kanidm-builder = "kanidm_builder:cli"
